--- a/package.json
+++ b/package.json
@@ -28,10 +28,12 @@
     "buffer": "^6.0.3",
     "detect-inapp": "1.4.0",
     "dotenv": "^16.0.3",
+    "firebase": "^10.5.2",
     "gatsby-plugin-material-ui": "^4.0.2",
     "html2canvas": "^1.4.1",
     "material-ui-popup-state": "^5.0.4",
     "moment": "^2.29.4",
+    "nanoid": "^5.0.2",
     "react": "17.0.2",
     "react-awesome-modal": "2.0.5",
     "react-bootstrap": "1.6.1",
